[package]
name = "jelly-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=[]

[dependencies]
delegate = "0.7.0"
#jelly-mem_access = { versipn="0.1.6", default-features=false }
jelly-mem_access = { git="https://github.com/ryuz/jelly-mem_access.git", branch="develop" default-features=false }
